# XPulse

./: ARCHITECTURE.md  README.md  issues.md
.github/workflows/: deploy.yml
app/: .env.example  .gitignore  README.md  SETUP.md  dart_defines.example.json  pubspec.yaml
app/assets/data/: sample_user.json
app/ios/Runner/: AppDelegate.swift  Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
app/lib/: app.dart  main.dart
app/lib/core/: app_state.dart
app/lib/core/models/: user_snapshot.dart
app/lib/core/repositories/: user_repository.dart
app/lib/core/services/: api_client.dart  background_sync.dart  health_service.dart  health_types.dart  notification_service.dart  storage_service.dart  sync_service.dart
app/lib/screens/: app_shell.dart  auth_screen.dart  health_setup_screen.dart  home_screen.dart  leaderboard_screen.dart  side_quests_screen.dart
app/lib/ui/contracts/: component_library.dart  (+1 more)
app/test/: render_splash_test.dart  widget_test.dart
backend/: .env.example  .gitignore  ARCHITECTURE.md  DATA_COLLECTION.md  README.md  architecture.md  data_collection.md  main.py  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  db.py  main.py  models.py  quests.py  schemas.py
backend/app/api/: auth.py  me.py  samples.py  snapshot.py  system.py
backend/app/models/: user.py
backend/app/routers/: users.py
backend/app/schemas/: __init__.py  user.py
backend/scripts/: bootstrap_vm.sh
docs_android/: mobile_data.md
docs_ios/: mobile_data.md  watch_data.md
(+3 files in other folders)
